...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="230dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:background="@color/colorPrimary"
            android:text="Next"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:padding="16dp"
            android:gravity="right"
            android:id="@+id/next_button"/>

    </LinearLayout>-->

</RelativeLayout>
