...
                    android:textColor="#000000"
                    android:padding="16dp"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ingredients_list_view"
                    android:scrollbars="none"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:divider="@android:color/transparent">
                </android.support.v7.widget.RecyclerView>

...
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/steps_list_view"
            android:scrollbars="none"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:divider="@android:color/transparent">
        </android.support.v7.widget.RecyclerView>

...
