<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading_layout">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pick A Dish"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textColor="#000000"
            android:padding="32dp"
            android:gravity="center"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dishes_recycler_view"
            android:layout_gravity="center">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>